--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: Oksana Iamshanova
 email: iamshanova.oksana@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Personal website of Dr Oksana Iamshanova.
-baseurl: "yat" # the subpath of your site, e.g. /blog
-url: "https://ksu-kvitneva.githug.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://oksana.iamshanova.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: iamshanovaO
 github_username:  
 
