--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: iamshanova.oksana@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Personal website of Dr Oksana Iamshanova.
 baseurl: "yat" # the subpath of your site, e.g. /blog
-url: "https://oksana-iamshanova.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://oksana-iamshanova.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: iamshanovaO
 github_username:  
 
